--- a/package.json
+++ b/package.json
@@ -25,14 +25,30 @@
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.12",
+    "@angular2-material/button": "2.0.0-alpha.6",
+    "@angular2-material/button-toggle": "2.0.0-alpha.6-2",
+    "@angular2-material/card": "2.0.0-alpha.6",
+    "@angular2-material/checkbox": "2.0.0-alpha.6",
+    "@angular2-material/core": "2.0.0-alpha.6",
+    "@angular2-material/grid-list": "2.0.0-alpha.6",
+    "@angular2-material/icon": "2.0.0-alpha.6",
+    "@angular2-material/input": "2.0.0-alpha.6",
+    "@angular2-material/list": "2.0.0-alpha.6",
+    "@angular2-material/progress-bar": "2.0.0-alpha.6",
+    "@angular2-material/progress-circle": "2.0.0-alpha.6",
+    "@angular2-material/radio": "2.0.0-alpha.6",
+    "@angular2-material/sidenav": "2.0.0-alpha.6",
+    "@angular2-material/slide-toggle": "^2.0.0-alpha.6",
+    "@angular2-material/tabs": "2.0.0-alpha.6",
+    "@angular2-material/toolbar": "2.0.0-alpha.6"
   },
   "devDependencies": {
     "@angular/platform-server": "2.0.0-rc.4",
     "@angular/service-worker": "0.2.0",
     "@angular/app-shell": "0.0.0",
     "angular2-broccoli-prerender": "0.11.5",
-    "angular2-universal":"0.104.5",
+    "angular2-universal": "0.104.5",
     "angular2-universal-polyfills": "0.4.1",
     "preboot": "2.0.10",
     "angular-cli": "1.0.0-beta.10",
